Agrego funciones del administrador
